# dataito

./: .gitignore  framework.md  pyproject.toml  readme.md  setup.cfg  setup.py
src/dataito/: _init_.py  dataito.py
src/dataito.egg-info/: PKG-INFO  SOURCES.txt
tests/: data.xlsx
