[metadata]
name = dataito
version = 0.0.1
author = CAIWEI
author_email = caiwei-email@qq.com
description = Python data input (i), transform (t), output (o), a line of code to read / convert a variety of formats of data files
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src